src/styles/_responsive.scss
@use './variables';

@media screen and (min-width: variables.$large) {
  .wrapper__shortened {
    .shortened {
      .original-link {
        font-size: 1.2rem;
      }

      a {
        font-size: 1.2rem;
      }

      button {
        font-size: 1rem;
      }
    }
  }
}

@media screen and (max-width: variables.$large) {
  .hero {
    padding-top: 100px;
    padding-bottom: 100px;

    .wrapper {
      flex-direction: row;
      gap: 40px;

      h1 {
        font-size: 3.5rem;
        line-height: 4rem;
      }

      /*.hero__subtitle {
        font-size: 1rem;
        margin-bottom: 40px;
      }*/
    }
  }

  .footer {
    .wrapper {
      gap: 70px;

      .footer__social {
        flex-direction: column;
        gap: 10px;
      }
    }
  }
}

@media screen and (max-width: variables.$medium) {
  .nav {
    .wrapper {
      .mobile__wrapper {
        background-color: variables.$color-primary-violet;
        position: absolute;
        padding: 30px 30px;
        border-radius: 8px;
        width: calc(100% - 40px);
        top: 100px;
        z-index: 2;
        display: none;

        &.show {
          display: flex;
        }

        .nav__links {
          ul {
            gap: 20px;

            li {
              a {
                color: variables.$color-neutral-white;

                &:hover {
                  color: variables.$color-primary-cyan;
                }
              }
            }
          }
        }

        .nav__actions {
          gap: 20px;

          a {
            color: variables.$color-neutral-white;

            &:hover {
              color: variables.$color-primary-cyan;
            }
          }
        }
      }

      .nav__hamburguer {
        display: block;
        margin-left: auto;
      }
    }
  }

  .hero {
    padding-top: 100px;
    padding-bottom: 100px;

    .wrapper {
      flex-direction: row;
      gap: 40px;

      h1 {
        font-size: 3rem;
        line-height: 3.5rem;
      }

      .hero__subtitle {
        font-size: 1.15rem;
        margin-bottom: 40px;
      }
    }
  }

  .shortener {
    &::before {
      height: 41px;
    }

    .wrapper__form {
      padding: 40px;

      form {
        gap: 15px;

        input {
          border-radius: 5px;
          padding: 10px 15px;
          font-size: .9rem;
        }

        button {
          border-radius: 5px;
          padding: 10px 40px;
        }
      }

      .invalid-message {
        position: absolute;
        top: 85px;
      }
    }

    .wrapper__shortened {
      .shortened {
        flex-direction: column;
        gap: 20px;
        align-items: flex-start;
        position: relative;
        padding: 15px;

        .original-link {
          &::before {
            content: "";
            position: absolute;
            top: 50px;
            left: -0;
            right: -0;
            border-bottom: 1px solid variables.$color-neutral-bg-gray;
          }
        }

        button {
          padding: 10px 20px;
          border-radius: 5px;
          width: 100%;
          font-weight: 700;
          margin-top: -10px;
        }
      }
    }
  }

  .features {
    padding-top: 100px;
    padding-bottom: 100px;

    .wrapper {
      h3 {
        font-size: 1.5rem;
      }

      p {
        font-size: 1rem;
        max-width: 100%;
      }

      .features__cards {
        flex-direction: column;
        gap: 45px;

        .card {
          text-align: center;

          div {
            left: calc(50% - 45px);
          }

          &:not(:nth-child(1)) {
            &::before {
              content: '';
              width: 8px;
              height: 55px;
              left: calc(50% - 4px);
              top: -90px;
            }
          }

          &:nth-child(3) {
            margin-top: 45px;
          }
        }
      }
    }
  }

  .footer {
    .wrapper {
      flex-direction: column;
      align-items: center;
      text-align: center;
      padding: 50px 0;
      gap: 50px;

      .footer__logo {
        margin-right: 0;
      }

      .footer__links {
        flex-direction: column;
        align-items: center;
        text-align: center;
        gap: 40px;

        ul {
          gap: 5px;
        }
      }

      .footer__social {
        flex-direction: row;
        gap: 25px;
      }
    }
  }
}

@media screen and (max-width: variables.$small) {

  .btn {
    &.btn--big {
      font-size: 1rem;
      padding: 10px 25px;
    }
  }

  .nav {
    .wrapper {
      .mobile__wrapper {
        flex-direction: column;
        padding: 40px 30px;
    
        .nav__links { 
          width: 100%;     
          ul {
            flex-direction: column;
            gap: 30px;
            align-items: center;
    
            li {
              width: 100%;
              font-size: 1.2rem;
              text-align: center;
              a {
                display: block;
                width: 100%;
                color: variables.$color-neutral-white;
    
                &:hover {
                  color: variables.$color-primary-cyan;
                }
              }
            }
          }
        }
    
        .nav__actions {
          margin-top: 30px;
          padding-top: 30px;
          width: 100%;
          border-top: 0.5px solid #9e9aa766;
          ;
          margin-left: inherit;
          flex-direction: column;
          gap: 30px;
          align-items: center;
          text-align: center;
          
          a {
            width: 100%;
            color: variables.$color-neutral-white;
    
            &:hover {
              color: variables.$color-primary-cyan;
            }
          }
        }
      }
    }
  }

  .hero {
    padding-top: 100px;
    padding-bottom: 100px;

    .wrapper {
      flex-direction: column-reverse;
      gap: 40px;

      &>div {
        text-align: center;
      }

      h1 {
        font-size: 2.5rem;
        line-height: 3rem;
      }

      .hero__subtitle {
        font-size: 1rem;
        margin-bottom: 40px;
      }
    }
  }

  .shortener {
    padding: 0 20px;

    &::before {
      height: 67px;
    }

    .wrapper {
      border-radius: 10px;

      form {
        gap: 15px;
        flex-direction: column;

        input {
          border-radius: 5px;
          padding: 10px 15px;
          font-size: .9rem;
        }

        button {
          border-radius: 5px;
          padding: 10px 20px;
        }
      }

      .invalid-message {
        position: inherit;
        margin-top: -10px;
      }
    }
  }

  .call-to-action {
    .wrapper {
      gap: 15px;

      h3 {
        font-size: 1.5rem;
      }
    }
  }
}

